--- a/index.html
+++ b/index.html
@@ -412,6 +412,9 @@
           <textarea id="textarea-import" placeholder="Paste previously exported JSON here"></textarea>
           <button class="btn-danger btn-block mt-2" id="btn-import">Import & overwrite current data</button>
           <p class="muted small mt-2">Warning: importing will replace all current words and stats with the imported data.</p>
+          <input type="file" id="file-import" accept="application/json,.json,.txt"
+       style="margin-top:10px; margin-bottom:10px;" />
+<button class="btn-secondary btn-block" id="btn-import-file">Import from file</button>
         </div>
       </div>
     </div>
