--- a/index.html
+++ b/index.html
@@ -163,15 +163,14 @@
     #practice-area > * { width: 100%; }
 
     .practice-word {
-      font-size: 72px;
-      font-weight: 600;
-      display: flex;
-      justify-content: center;
-      align-items: baseline;
-      gap: 10px;
-      text-align: center;
-      margin-bottom: 20px;
-    }
+  font-size: clamp(28px, 6vw, 52px);
+  font-weight: 600;
+  text-align: center;
+  margin-bottom: 20px;
+  line-height: 1.1;
+  word-wrap: break-word;
+  word-break: break-word;
+}
     .practice-direction {
       text-align: center;
       font-size: 20px;
@@ -185,10 +184,6 @@
       text-align: center;
     }
     @media (max-width: 768px) {
-  .practice-word {
-    font-size: 40px;
-    line-height: 1.1;
-  }
   .practice-direction {
     font-size: 16px;
   }
