--- a/index.html
+++ b/index.html
@@ -473,6 +473,7 @@
       editingId: null,
       editingGerman: '',
       editingTurkish: '',
+      editingExample: '',
     };
 
     // --- Helpers ---
@@ -789,26 +790,29 @@
           tdActions.appendChild(btnCancel);
         } else {
           const btnEdit = document.createElement('button');
-          btnEdit.textContent = 'Edit';
-          btnEdit.className = 'btn-sm btn-outline';
-          btnEdit.onclick = () => {
-            uiState.editingId = w.id;
-            uiState.editingGerman = w.german;
-            uiState.editingTurkish = w.turkish;
-            updateStatsUI();
-          };
-          tdActions.appendChild(btnEdit);
+btnEdit.textContent = 'Edit';
+btnEdit.className = 'btn-sm btn-secondary';
+btnEdit.onclick = () => {
+  if (uiState.editingId === w.id) {
+    // Edit modundan çıkarken her şeyi sıfırla
+    uiState.editingId = null;
+    uiState.editingGerman = '';
+    uiState.editingTurkish = '';
+    uiState.editingExample = '';      // 🔸 EK
+    updateStatsUI();
+    return;
+  }
 
-          const btnDelete = document.createElement('button');
-          btnDelete.textContent = 'Delete';
-          btnDelete.className = 'btn-sm btn-outline';
-          btnDelete.style.marginLeft = '6px';
-          btnDelete.onclick = () => {
-            state.words = state.words.filter(x => x.id !== w.id);
-            saveState();
-            updateStatsUI();
-          };
-          tdActions.appendChild(btnDelete);
+  // Edit moduna girerken mevcut değerleri state'e yaz
+  uiState.editingId = w.id;
+  uiState.editingGerman = w.german;
+  uiState.editingTurkish = w.turkish;
+  uiState.editingExample = w.exampleSentence || '';  // 🔸 EK
+
+  updateStatsUI();
+};
+tdActions.appendChild(btnEdit);
+
         }
 
         tr.appendChild(tdActions);
@@ -1144,31 +1148,59 @@
 
         } else {
           // answer phase
-          const germanHTML = renderGermanHTML(word.german);
-          const example = word.exampleSentence;
+            } else if (currentCard.phase === 'answer') {
+    const word = currentCard.word;
+    const dirKey = currentCard.dirKey;
+    const area = document.getElementById('practice-area');
 
-          area.innerHTML = `
-            <div class="practice-direction">${dirLabel}</div>
-            <div class="practice-word">
-              <span>${germanHTML}</span>
-              <button class="btn-sm speak-btn" id="btn-speak-a">🔊</button>
-            </div>
-            <div class="turkish-answer">${word.turkish}</div>
-            ${example ? `
-              <div class="example-sentence">
-                <span class="muted small">Example sentence (German):</span><br>${example}
-              </div>` : ''}
-            <div class="flex-center gap-2 mt-4">
-              <button class="btn-outline btn-block" id="btn-repeat">Repeat</button>
-              <button class="btn-secondary btn-block" id="btn-know">I know</button>
-            </div>
+    // Yön etiketi (zaten vardı, aynısını kullanıyoruz)
+    const dirLabel =
+      dirKey === 'deTr'
+        ? 'Direction: German → Turkish'
+        : 'Direction: Turkish → German';
+
+    // Kelimeyi güzel gösteren mevcut fonksiyon
+    const germanHTML = renderGermanHTML(word.german);
+
+    // 1) Örnek cümle: önce senin kaydettiğin, yoksa otomatik üret
+    let example = word.exampleSentence;
+    if (!example) {
+      example = generateExampleSentence(word.german.trim());
+      word.exampleSentence = example; // ilk üretileni state'e yaz
+      saveState();
+    }
+
+    // 2) Answer ekranını çiz
+    area.innerHTML = `
+      <div class="practice-direction">${dirLabel}</div>
+      <div class="practice-word">
+        <span>${germanHTML}</span>
+        <button class="btn-sm speak-btn" id="btn-speak-a">🔊</button>
+      </div>
+      <div class="turkish-answer">${word.turkish}</div>
+      ${
+        example
+          ? `
+        <div class="example-sentence">
+          <span class="muted small">Example sentence (German):</span><br>${example}
+        </div>
+      `
+          : ''
+      }
+      <div class="flex-center gap-2 mt-4">
+        <button class="btn-outline btn-block" id="btn-repeat">Repeat</button>
+        <button class="btn-secondary btn-block" id="btn-know">I know</button>
+      </div>
+    `;
+
+    // 3) Butonların davranışı (eski kodun birebir aynısı)
+    document.getElementById('btn-speak-a').onclick = () => speakGerman(word.german);
+    document.getElementById('btn-repeat').onclick = () => reviewAnswer(false);
+    document.getElementById('btn-know').onclick = () => reviewAnswer(true);
+  } else if (mode === 'writing') {
+
           `;
-          document.getElementById('btn-speak-a').onclick = () => speakGerman(word.german);
-          document.getElementById('btn-repeat').onclick = () => reviewAnswer(false);
-          document.getElementById('btn-know').onclick = () => reviewAnswer(true);
-        }
-
-      } else if (mode === 'writing') {
+         {
         area.innerHTML = `
           <div class="practice-direction">Mode: Writing • Type the German word</div>
           <div class="practice-word">${word.turkish}</div>
